--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "python run.py"
+  command = "pip install -r requirements.txt && python run.py"
   publish = "public"
   functions = "netlify/functions"
