--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,7 @@
 [build]
+  base = "main"
   command = "pip install -r requirements.txt && python run.py"
-  publish = "public"
-  functions = "netlify/functions"
+  publish = "main/"
+
+[functions]
+  directory = "main/netlify/functions/"
