--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,9 @@
 [tool.poetry]
-name = "myproject"
+name = "highrise-bot"
 version = "1.0.0"
 
 [tool.poetry.dependencies]
-python = "^3.12"
 pendulum = "^2.1.2"
+highrise = "^1.0.0"
 
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+[tool.poetry.dev-dependencies]
